--- a/quarto/reference/apis.qmd
+++ b/quarto/reference/apis.qmd
@@ -3,16 +3,78 @@
 
 ## Type hierarchy
 
-```@docs
-AbstractAnnotationSet
-CitableCommentary
+
+`AbstractAnnotationSet`
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+using CitableAnnotations
+@doc AbstractAnnotationSet
 ```
+:::
+
+
+`CitableCommentary`
+
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc CitableCommentary
+```
+:::
+
 
 ## Metadata about annotation sets
 
-```@docs
-annotatedtype
-annotatingtype 
-annotated
-annotators
+
+`annotatedtype`
+
+
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc annotatedtype
 ```
+:::
+
+`annotatingtype` 
+
+
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc annotatingtype
+```
+:::
+
+`annotated`
+
+
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc annotated
+```
+:::
+
+`annotators`
+
+
+
+:::{.callout-note appearance="minimal"}
+```{julia}
+#| echo: false
+#| warning: false
+@doc annotators
+```
+:::
