--- a/quarto/reference/index.qmd
+++ b/quarto/reference/index.qmd
@@ -2,17 +2,8 @@
 title: Reference
 ---
 
-Look it up here.
+
+- [API documentation](./apis.qmd)
 
 
 
-`annotatedtype`
-
-:::{.callout-note appearance="minimal"}
-```{julia}
-#| echo: false
-#| warning: false
-using CitableAnnotations
-@doc annotatedtype
-```
-:::
